# hello-world-avs-as-exex

./: .env.example  Cargo.toml  README.md
src/: avs-utils.rs  main.rs
src/utils/: avs_contract.rs  constants.rs  mod.rs  monitor_tasks.rs
