[package]
name = "exex-avs-operator"
edition = "2021"
resolver = "2"

[dependencies]

# Eigen
eigen-client-elcontracts = { git = "https://github.com/Layr-Labs/eigensdk-rs", protocol = "https" }
eigen-types = { git = "https://github.com/Layr-Labs/eigensdk-rs", protocol = "https" }
eigen-utils = { git = "https://github.com/Layr-Labs/eigensdk-rs", protocol = "https" }
eigen-logging = { git = "https://github.com/Layr-Labs/eigensdk-rs", protocol = "https" }

# Misc
async-trait = "0.1.82"
eyre = "0.6"
hex-literal = "0.4.1"
hex = "0.4.3"
serde = "1.0.210"
serde_json = "1.0.128"
futures-util = "0.3"
futures = "0.3"
dotenv = "0.15.0"
once_cell = "1.20.2"
tokio = { version = "1.37.0", features = ["test-util", "full", "sync", "rt-multi-thread", "macros"] }

# Reth
web3 = "0.19.0"
reth = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git" }
ethers = "2.0.14"

alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "cc68b93605f4521c2b0bce1a7efaeff2046cf07c", features = ["ws"] }
# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git" }

[net]
git-fetch-with-cli = true