[package]
name = "exex-avs-operator"
edition = "2021"
resolver = "2"

[dependencies]

# Misc
web3 = "0.19.0"
ethers = "2.0.14"
zerocopy = "0.8.7"
async-trait = "0.1.82"
eyre = "0.6"
hex-literal = "0.4.1"
hex = "0.4.3"
serde = "1.0.210"
serde_json = "1.0.128"
futures-util = "0.3"
futures = "0.3"
dotenv = "0.15.0"
once_cell = "1.20.2"
tokio = { version = "1.37.0", features = ["test-util", "full", "sync", "rt-multi-thread", "macros"] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "cc68b93605f4521c2b0bce1a7efaeff2046cf07c", features = ["ws"] }


# Reth
reth = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git" }

# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git" }


[net]
git-fetch-with-cli = true
